--- a/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SeedMenu.fxml
@@ -59,16 +59,16 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="chooseSeedButton3" layoutX="405.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu3" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
-      <ProgressBar fx:id="difficultyBarThree" layoutX="409.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.82" stylesheets="@cssSheets.css" visible="false" />
-      <ImageView fx:id="imagePlantThree1" fitHeight="88.0" fitWidth="111.0" layoutX="244.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="chooseSeedButton2" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu2" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
-      <ProgressBar fx:id="difficultyBarThree1" layoutX="227.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
-      <ImageView fx:id="imagePlantThree2" fitHeight="88.0" fitWidth="111.0" layoutX="35.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="chooseSeedButton1" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu1" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
-      <ProgressBar fx:id="difficultyBarThree2" layoutX="48.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.22" stylesheets="@cssSheets.css" visible="false" />
+      <Button fx:id="chooseSeedButton3" layoutX="405.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu3" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" />
+      <ProgressBar fx:id="difficultyBarThree" layoutX="409.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.82" stylesheets="@cssSheets.css" />
+      <ImageView fx:id="imagePlantThree1" fitHeight="88.0" fitWidth="111.0" layoutX="244.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+      <Button fx:id="chooseSeedButton2" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu2" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" />
+      <ProgressBar fx:id="difficultyBarThree1" layoutX="227.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" />
+      <ImageView fx:id="imagePlantThree2" fitHeight="88.0" fitWidth="111.0" layoutX="35.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+      <Button fx:id="chooseSeedButton1" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu1" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" />
+      <ProgressBar fx:id="difficultyBarThree2" layoutX="48.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.22" stylesheets="@cssSheets.css" />
       <Button fx:id="chooseSeedButtonExtended2" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu2" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
-      <ImageView fx:id="seedImage2" disable="true" fitHeight="141.0" fitWidth="163.0" layoutX="224.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView fx:id="seedImage2" disable="true" fitHeight="141.0" fitWidth="163.0" layoutX="224.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/plant2/pumpkinLvl4.png" />
          </image>
@@ -90,12 +90,12 @@
       <ProgressBar fx:id="seedDifficultyBar1" layoutX="47.0" layoutY="301.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
       <Rectangle fx:id="seedSpeciesDifficualty1" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="54.0" layoutY="271.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
       <Label fx:id="seedDifficualty1" layoutX="91.0" layoutY="275.0" text="Difficualty" visible="false" />
-      <ImageView fx:id="seedImage3" disable="true" fitHeight="113.0" fitWidth="152.0" layoutX="407.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView fx:id="seedImage3" disable="true" fitHeight="113.0" fitWidth="152.0" layoutX="407.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/plant3/monsteraLvl4.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="seedImage1" disable="true" fitHeight="133.0" fitWidth="102.0" layoutX="68.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView fx:id="seedImage1" disable="true" fitHeight="133.0" fitWidth="102.0" layoutX="68.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/plant1/cactusLvl4.png" />
          </image>
@@ -125,6 +125,46 @@
             <Image url="@../../../images/pictureFonts/backPixelFont.png" />
          </image>
       </ImageView>
+      <JFXButton fx:id="switchSeedButtonLeft" layoutX="-12.0" layoutY="156.0" onAction="#switchSeedsToLeft" prefHeight="88.0" prefWidth="52.0" styleClass="buttonNextPageSeedMenuLeft" stylesheets="@cssSheets.css" text="." visible="false" />
+      <JFXButton fx:id="switchSeedButtonRight" layoutX="560.0" layoutY="158.0" onAction="#switchSeedsToRight" prefHeight="88.0" prefWidth="52.0" styleClass="buttonNextPageSeedMenuRight" stylesheets="@cssSheets.css" text="." />
+      <ImageView fx:id="leftArrow" disable="true" fitHeight="65.0" fitWidth="52.0" layoutX="2.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../images/left.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="rightArrow" disable="true" fitHeight="101.0" fitWidth="33.0" layoutX="567.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/right.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="chooseSeedButton4" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu4" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
+      <ProgressBar fx:id="difficultyBarThree21" layoutX="48.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.7" stylesheets="@cssSheets.css" visible="false" />
+      <Button fx:id="chooseSeedButton5" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu5" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
+      <ProgressBar fx:id="difficultyBarThree11" layoutX="227.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.37" stylesheets="@cssSheets.css" visible="false" />
+      <Button fx:id="chooseSeedButtonExtended4" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu4" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
+      <Rectangle fx:id="seedSpecies4" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="53.0" layoutY="244.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
+      <Label fx:id="seedSpeciesLabel4" layoutX="94.0" layoutY="249.0" text="Sunflower" visible="false" />
+      <ProgressBar fx:id="seedDifficultyBar4" layoutX="47.0" layoutY="303.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
+      <Rectangle fx:id="seedSpeciesDifficualty4" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="54.0" layoutY="273.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
+      <Label fx:id="seedDifficualty4" layoutX="92.0" layoutY="277.0" text="Difficualty" visible="false" />
+      <ImageView fx:id="seedImage4" disable="true" fitHeight="134.0" fitWidth="84.0" layoutX="78.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../images/plant4/sunflowerLvl4.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="plantNewSeedButton4" layoutX="94.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
+      <Button fx:id="chooseSeedButtonExtended5" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu5" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
+      <Rectangle fx:id="seedSpecies5" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="235.0" layoutY="244.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
+      <Label fx:id="seedSpeciesLabel5" layoutX="275.0" layoutY="249.0" text="Snakeplant" visible="false" />
+      <ProgressBar fx:id="seedDifficultyBar5" layoutX="228.0" layoutY="303.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
+      <Rectangle fx:id="seedSpeciesDifficualty5" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="235.0" layoutY="273.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
+      <Label fx:id="seedDifficualty5" layoutX="273.0" layoutY="277.0" text="Difficualty" visible="false" />
+      <ImageView fx:id="seedImage5" disable="true" fitHeight="141.0" fitWidth="163.0" layoutX="240.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../../../images/plant5/snakeplantLvl4.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="plantNewSeedButton5" layoutX="276.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
       <Rectangle fx:id="namePlantPrompt" arcHeight="5.0" arcWidth="5.0" fill="#61523a" height="113.0" layoutX="176.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="247.0" />
       <TextField fx:id="namePlantField" layoutX="216.0" layoutY="183.0" promptText="ex.  Spike" visible="false" />
       <Label fx:id="nameYourPlantLabel" layoutX="191.0" layoutY="130.0" text="Name your plant!" visible="false">
@@ -145,39 +185,6 @@
          </font>
       </Button>
       <Button fx:id="enterNameButton" layoutX="365.0" layoutY="183.0" mnemonicParsing="false" onAction="#plantSeedOne" text="enter" visible="false" />
-      <JFXButton fx:id="switchSeedButtonLeft" layoutX="-12.0" layoutY="156.0" onAction="#switchSeedsToLeft" prefHeight="88.0" prefWidth="52.0" styleClass="buttonNextPageSeedMenuLeft" stylesheets="@cssSheets.css" text="." visible="false" />
-      <JFXButton fx:id="switchSeedButtonRight" layoutX="560.0" layoutY="158.0" onAction="#switchSeedsToRight" prefHeight="88.0" prefWidth="52.0" styleClass="buttonNextPageSeedMenuRight" stylesheets="@cssSheets.css" text="." />
-      <ImageView fx:id="leftArrow" disable="true" fitHeight="65.0" fitWidth="52.0" layoutX="2.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../../../images/left.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="rightArrow" disable="true" fitHeight="101.0" fitWidth="33.0" layoutX="567.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/right.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="chooseSeedButton4" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu4" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" />
-      <ProgressBar fx:id="difficultyBarThree21" layoutX="48.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.7" stylesheets="@cssSheets.css" />
-      <Button fx:id="chooseSeedButton5" layoutX="224.0" layoutY="111.0" mnemonicParsing="false" onAction="#showExtendedSeedMenu2" prefHeight="181.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" />
-      <ProgressBar fx:id="difficultyBarThree11" layoutX="227.0" layoutY="265.0" prefHeight="14.0" prefWidth="143.0" progress="0.37" stylesheets="@cssSheets.css" />
-      <Button fx:id="chooseSeedButtonExtended4" layoutX="43.0" layoutY="111.0" mnemonicParsing="false" onAction="#hideExtendedSeedMenu3" prefHeight="246.0" prefWidth="152.0" styleClass="backgroundColor" stylesheets="@cssSheets.css" visible="false" />
-      <Rectangle fx:id="seedSpecies4" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="53.0" layoutY="244.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedSpeciesLabel4" layoutX="94.0" layoutY="249.0" text="Sunflower" visible="false" />
-      <ProgressBar fx:id="seedDifficultyBar4" layoutX="47.0" layoutY="303.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" stylesheets="@cssSheets.css" visible="false" />
-      <Rectangle fx:id="seedSpeciesDifficualty4" arcHeight="5.0" arcWidth="5.0" disable="true" fill="#92eaa9" height="26.0" layoutX="54.0" layoutY="273.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="131.0" />
-      <Label fx:id="seedDifficualty4" layoutX="92.0" layoutY="277.0" text="Difficualty" visible="false" />
-      <ImageView fx:id="seedImage5" disable="true" fitHeight="141.0" fitWidth="163.0" layoutX="240.0" layoutY="113.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/plant5/snakeplantLvl4.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="seedImage4" disable="true" fitHeight="134.0" fitWidth="84.0" layoutX="78.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/plant4/sunflowerLvl4.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="plantNewSeedButton4" layoutX="94.0" layoutY="320.0" mnemonicParsing="false" onAction="#namePlantPrompt" styleClass="backgroundColor" stylesheets="@cssSheets.css" text="Plant!" visible="false" />
    </children>
    <effect>
       <Glow />
