--- a/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
@@ -36,7 +36,7 @@
       </JFXButton>
       <Pane layoutX="60.0" layoutY="61.0" prefHeight="261.0" prefWidth="332.0">
          <children>
-            <JFXToggleNode layoutX="14.0" layoutY="222.0" prefHeight="25.0" prefWidth="52.0">
+            <JFXToggleNode layoutX="14.0" layoutY="222.0" onAction="#stopMusic" prefHeight="25.0" prefWidth="52.0">
                <selectedColor>
                   <Color red="0.15442252159118652" green="0.17517970502376556" blue="0.19736842811107635" />
                </selectedColor>
@@ -50,7 +50,7 @@
                   <BoxBlur />
                </effect>
             </JFXToggleNode>
-            <Label layoutX="73.0" layoutY="224.0" text="Turn On/Off lights">
+            <Label layoutX="73.0" layoutY="224.0" text="Music toggle">
                <font>
                   <Font name="Nirmala UI Bold" size="15.0" />
                </font>
