Background music can turn on and off from SettingsGUI.fxml

--- a/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
@@ -36,12 +36,12 @@
       </JFXButton>
       <Pane layoutX="60.0" layoutY="61.0" prefHeight="261.0" prefWidth="332.0">
          <children>
-            <JFXToggleNode layoutX="14.0" layoutY="222.0" onAction="#turnOnMusic" prefHeight="25.0" prefWidth="52.0">
+            <JFXToggleNode layoutX="32.0" layoutY="222.0" onAction="#turnOnMusic" prefHeight="25.0" prefWidth="34.0">
                <selectedColor>
-                  <Color red="0.15442252159118652" green="0.17517970502376556" blue="0.19736842811107635" />
+                  <Color red="0.046296294778585434" green="1.0" blue="0.22114197909832" />
                </selectedColor>
                <unSelectedColor>
-                  <Color red="0.975344181060791" green="0.9868420958518982" blue="0.2969663739204407" />
+                  <Color red="0.3947368562221527" green="0.3947368562221527" blue="0.3947368562221527" />
                </unSelectedColor>
                <cursor>
                   <Cursor fx:constant="NONE" />
@@ -77,6 +77,11 @@
             <ImageView disable="true" fitHeight="80.0" fitWidth="52.0" layoutX="8.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../images/settingsBulb.png" />
+               </image>
+            </ImageView>
+            <ImageView disable="true" fitHeight="25.0" fitWidth="44.0" layoutX="36.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/sound-waves.png" />
                </image>
             </ImageView>
          </children>
